--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
+    "vue-stomp": "0.0.5",
     "vuex": "3.1.0"
   },
   "devDependencies": {
